--- a/OtherHooks/reactHooks/src/index.css
+++ b/OtherHooks/reactHooks/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(83, 128, 226, 0.87);
+  background-color: #c2ee9c;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
