--- a/OtherHooks/reactHooks/src/App.css
+++ b/OtherHooks/reactHooks/src/App.css
@@ -40,3 +40,18 @@
 .read-the-docs {
   color: #888;
 }
+
+.border{
+  background-color: yellow;
+  border: 4px solid black;
+  width: 600px;
+  height: 250px;
+}
+
+.btn{
+  margin: 10px;
+  border: 2px solid green;
+  color: rgb(28, 146, 43);
+  font-weight: bold;
+  font-size:20px;
+}
